# protobuf-demo-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix
src/: CMakeLists.txt
src/client/: main.cc
src/common/: message.proto
src/server/: main.cc
